--- a/ViewMarkdownBlazor/ViewMarkdownBlazor.csproj
+++ b/ViewMarkdownBlazor/ViewMarkdownBlazor.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="wwwroot\files\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Markdig.Signed" Version="0.26.0" />
+    <PackageReference Include="MudBlazor" Version="5.2.0" />
   </ItemGroup>
 
 </Project>
